--- a/src/css/global.module.css
+++ b/src/css/global.module.css
@@ -11,4 +11,14 @@
   box-shadow: 0px 16px 17px -5px rgba(128, 128, 128, 0.4);
 }
 
+:root {
+  --padding-x: 0 5rem;
+}
+
+@media screen and (min-width: 899px) {
+  :root {
+    --padding-x: 0 1rem;
+  }
+}
+
 /*# sourceMappingURL=global.module.css.map */
