--- a/src/css/global.module.scss
+++ b/src/css/global.module.scss
@@ -1,11 +1,26 @@
-.cart{
+.cart {
   overflow: hidden;
   border-radius: 5px;
   padding: 0 !important;
   transition: transform 0.3s;
   border: 1px solid rgba(189, 189, 189, 0.68);
 }
-.cart:hover{
+.cartPadding {
+  padding: var(--padding-x);
+  display: flex;
+  justify-content: space-between;
+}
+.cart:hover {
   transform: translateY(-5px);
   box-shadow: 0px 16px 17px -5px #80808066;
+}
+
+:root {
+  --padding-x: 0 5rem;
+}
+
+@media screen and (max-width: 899px) {
+  :root {
+    --padding-x: 0 1rem;
+  }
 }
