--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -1,10 +1,38 @@
+.cart {
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 0 !important;
+  transition: transform 0.3s;
+  border: 1px solid rgba(189, 189, 189, 0.68);
+}
+
+.cartPadding {
+  padding: var(--padding-x);
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 16px 17px -5px rgba(128, 128, 128, 0.4);
+}
+
+:root {
+  --padding-x: 0 5rem;
+}
+
+@media screen and (max-width: 899px) {
+  :root {
+    --padding-x: 0 1rem;
+  }
+}
 .header {
   width: 100%;
   position: absolute;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 5rem;
+  padding: var(--padding-x);
   height: 4rem;
   z-index: 1;
 }
@@ -112,6 +140,7 @@
 }
 
 .boxNavigate {
+  padding-left: 10%;
   min-width: 30rem !important;
 }
 
