--- a/src/css/home-page.module.scss
+++ b/src/css/home-page.module.scss
@@ -1,3 +1,4 @@
+@import "global.module";
 .videoHome {
   position: relative;
 }
@@ -19,7 +20,7 @@
   position: absolute;
   color: #fff;
   width: 100%;
-  padding: 0 5rem;
+  padding: var(--padding-x);
 }
 
 .videoHomeTitle {
@@ -90,6 +91,5 @@
     position: static;
     color: #000;
     width: 100%;
-    padding: 0 5rem;
   }
 }
