--- a/src/css/popular.module.css
+++ b/src/css/popular.module.css
@@ -1,3 +1,31 @@
+.cart {
+  overflow: hidden;
+  border-radius: 5px;
+  padding: 0 !important;
+  transition: transform 0.3s;
+  border: 1px solid rgba(189, 189, 189, 0.68);
+}
+
+.cartPadding {
+  padding: var(--padding-x);
+  display: flex;
+  justify-content: space-between;
+}
+
+.cart:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 16px 17px -5px rgba(128, 128, 128, 0.4);
+}
+
+:root {
+  --padding-x: 0 5rem;
+}
+
+@media screen and (max-width: 899px) {
+  :root {
+    --padding-x: 0 1rem;
+  }
+}
 .cartContent {
   margin: 3rem 0;
 }
